instagram link setup

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- FOOTER -->
   <footer>
     <p>© 2026 nuverse.sa</p>
-    <p><a href="#">Instagram</a> · <a href="#">Contact</a></p>
+    <p><a href="https://www.instagram.com/nuverse.sa/" target="_blank">Instagram</a> · <a href="#">Contact</a></p>
   </footer>
 
   <script src="script.js"></script>
