Added policy page

--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2026 nuverse.sa</p>
-    <p><a href="https://www.instagram.com/nuverse.sa/" target="_blank">Instagram</a> · <a href="#">Contact</a></p>
+    <p>© 2026 nuverse.co.za</p>
+    <p>
+      <a href="https://www.instagram.com/nuverse.sa/" target="_blank">Instagram</a> · 
+      <a href="contact.html">Contact</a> ·
+      <a href="policy.html">Policy</a>
+    </p>
   </footer>
 
   <script src="script.js"></script>
