Ebook downloads from google cloud

--- a/success.html
+++ b/success.html
@@ -98,14 +98,14 @@
         Click below to download your copy instantly.
       </p>
 
-      <!-- DIRECT DOWNLOAD -->
-      <a
-        href="https://drive.google.com/uc?export=download&id=FILE_ID"
-        class="buy-btn pulse-btn"
-        style="display:inline-block; margin-top:30px;"
-      >
-        Download PDF
-      </a>
+     <!-- DIRECT DOWNLOAD -->
+    <a
+    href="https://drive.google.com/uc?export=download&id=1XrpFh3r11c1DBs_8lJ33gnbwYVyYZYjX"
+    class="buy-btn pulse-btn"
+    style="display:inline-block; margin-top:30px;"
+    >
+     Download PDF
+   </a>
 
       <p style="margin-top:40px; opacity:0.6;">
         If the download doesn't start, tap the button again.
