Changed book description, chnaged policy page and added real email for nuverse.

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
       <h2>Bought You Some Roses</h2>
 
       <p>
-        This collection leans towards gentleness, yearning,
-        and memory, written for those who love deeply, who are deeply loved,
+        This collection leans towards gentleness, yearning
+        and memory. Written for those who love deeply, who are deeply loved,
         the lonely observer, the yearner and whoever may not
         have the words to describe how they feel.
       </p>
 
-      <ul>
+      <ul>  
         <li>31 pages</li>
         <li>Digital PDF</li>
         <li>Instant access after payment</li>
@@ -143,7 +143,7 @@
     <p>© 2026 nuverse.co.za</p>
     <p>
       <a href="https://www.instagram.com/nuverse.sa/" target="_blank">Instagram</a> ·
-      <a href="contact.html">Contact</a> ·
+      <a href="https://www.instagram.com/nuverse.sa/">Contact</a> ·
       <a href="policy.html">Policy</a>
     </p>
   </footer>
