--- a/policy.html
+++ b/policy.html
@@ -12,7 +12,7 @@
     <img src="assets/logo.png" alt="Nuverse Logo" class="logo">
   </nav>
 
-  <section class="hero">
+  <section class="policy-hero">
     <h1>Privacy Policy & Terms</h1>
     <p class="description">
       This page explains how Nuverse collects, uses, and protects your information.
@@ -30,14 +30,14 @@
     <p>All sales are final for digital PDFs. Please contact us if there are technical issues with delivery.</p>
 
     <h2>4. Contact</h2>
-    <p>Email: <a href="mailto:info@nuverse.co.za">info@nuverse.co.za</a></p>
+    <p>Email: <a href="mailto:nuverse.sa@gmail.com">nuverse.sa@gmail.com</a></p>
   </section>
 
   <footer>
     <p>© 2026 nuverse.co.za</p>
     <p>
       <a href="https://www.instagram.com/nuverse.sa/" target="_blank">Instagram</a> · 
-      <a href="contact.html">Contact</a> ·
+      
       <a href="policy.html">Policy</a>
     </p>
   </footer>
