--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <!-- ✅ SEO TITLE -->
   <title>Bought You Some Roses — Digital Poetry Book | Nuverse SA</title>
 
+  <!-- ✅ FAVICON (for Live Server) -->
+<link rel="icon" type="image/png" href="./assets/fav.png">
+<link rel="shortcut icon" type="image/png" href="./assets/fav.png">
+
   <!-- ✅ SEO META DESCRIPTION -->
   <meta name="description" content="Bought You Some Roses is a digital poetry collection by Nuverse SA exploring love, longing, memory, and gentleness. Instant PDF download available after secure payment.">
 
